traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:4: error: ';' expected but ',' found.
  setPos(0,0),
             ^TraversalDiagonal:6: error: ':' expected but ',' found.
  def trianglemoiti?1(x,y){
                       ^TraversalDiagonal:19: error: identifier expected but '}' found.
} 
^