traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
var count:Int=0
override def run() {
  
  setPos(0,0),
  writeMessage(0);
  def trianglemoiti?1(x,y){
    var x:Int=0;
    var y:Int=0;
    while(!isFacingWall()){
      setPos(x,y);
      writeMessage(count);
      y=y-1;
      x=+1;
      count=count+1;
      setPos(x,y);
      writeMessage(count);
    }
  }
}